[package]
name = "qubit-dcl"
version = "0.4.0"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-dcl"
description = "Reusable double-checked lock executor for Rust lock abstractions"
homepage = "https://github.com/qubit-ltd/rs-dcl"
documentation = "https://docs.rs/qubit-dcl"
readme = "README.md"
keywords = ["lock", "double-checked", "executor", "concurrency"]
categories = ["concurrency"]
exclude = [
    "align-ci.sh",
    "ci-check.sh",
    "coverage.sh",
    "style-check.sh",
    "update-submodule.sh",
    ".github/*",
    ".llvm-cov.toml",
    ".cargo-audit.toml.example",
]

[lib]
name = "qubit_dcl"
doctest = true

[dependencies]
log = "0.4"

qubit-function = "0.13"
qubit-lock = "0.5"

[dev-dependencies]
thiserror = "2.0"
