[package]
name = "qubit-dcl"
version = "0.9.2"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-dcl"
description = "Reusable double-checked lock executor for Rust lock abstractions"
homepage = "https://github.com/qubit-ltd/rs-dcl"
documentation = "https://docs.rs/qubit-dcl"
readme = "README.md"
keywords = ["lock", "double-checked", "executor", "concurrency"]
categories = ["concurrency"]
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/README.zh_CN.md",
    "/RUST_CODING_STYLE.md",
    "/RUST_CODING_STYLE.zh_CN.md",
    "/doc/**/user_guide*.md",
    "/examples/**",
    "/resources/**",
    "/src/**",
    "/tests/**",
]

[lib]
name = "qubit_dcl"
doctest = true

[dependencies]
log = "0.4"

qubit-function = "0.15"
qubit-lock = "0.9"
